--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,6 @@
 server.port=8081
 #server.servlet.context-path=
+spring.profiles.active=test
 
-spring.h2.console.enabled=true
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:~/test
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.format_sql=true
+jwt.expiration=86400000
+jwt.secret=estaehnossasecret
