Ajusta o método Post ("/orders") da classe PurchaseOrderController e seus respectivos métodos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,7 @@ server.port=8081
 #server.servlet.context-path=
 spring.profiles.active=test
 
+springdoc.swagger-ui.use-root-path = true
+
 jwt.expiration=86400000
 jwt.secret=estaehnossasecret
