--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>1.6.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-security</artifactId>
+            <version>1.6.6</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
