--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,6 +1,7 @@
 spring.h2.console.enabled=true
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:~/test
+#spring.datasource.url=jdbc:h2:~/test2
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.show-sql=true
